<resources>
    <string name="app_name">MyNote</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">SIGN UP</string>
    <string name="name">Name</string>
    <string name="write">Write Note</string>
    <string name="save">Save</string>

    <string name="title">Note Title</string>
    <string name="body">Type here..</string>
    <string name="enterdetails">Enter note details</string>

    <string name="recently">Recently</string>
    <string name="newaccount">Create new account!</string>
    <string name="haveccount">Already have account!</string>
    <string name="verifyEmail">Please check your email and click on the sent link to verify your account !</string>
    <string name="about">Write your notes in safe environment.</string>
    <string name="text_body">Text Body</string>
    <string name="my_profile">My Profile</string>
    <string name="vname">Name:</string>
    <string name="not_found">Not found !</string>
    <string name="vemail">Email:</string>
    <string name="createat">createat</string>
    <string name="update">Update</string>
    <string name="update_note">Update Note</string>
    <string name="delete">Delete</string>
    <string name="last_update_at">Last update at:</string>


</resources>