<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="start"
    tools:context=".activity.ViewNote"
    android:background="@color/green">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="31dp"
        android:text="@string/update_note"
        android:textColor="@color/gold"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@color/red"
        android:drawableEnd="@drawable/delete"
        android:drawableTint="@color/white"
        android:onClick="onDeleteNoteClick"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/lastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:text="@string/last_update_at"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <EditText
        android:id="@+id/upTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastUpdate"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#BCFFFFFF"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/lastUpdate" />

    <RelativeLayout
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upTitle"
        android:layout_marginTop="20dp"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/upTitle">

        <EditText
            android:id="@+id/upBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/body"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#BCFFFFFF"
            android:textSize="15sp" />
    </RelativeLayout>


    <Button
        android:id="@+id/save"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@color/gold"
        android:drawableEnd="@drawable/update"
        android:drawableTint="@color/white"
        android:onClick="onUpdateNoteClick"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/field" />


</RelativeLayout>